--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+
+
+
 <!DOCTYPE html>
 <html>
     <head>
@@ -11,12 +14,51 @@
     <md-toolbar>
       <div class="md-toolbar-tools">
         <h2><strong>ngClassifieds</strong></h2>
-        <md-button>
+        <md-button ng-click="openSidebar()">
           <md-icon class="mdi mdi-plus-circle"></md-icon>
           New Classifieds
         </md-button>
       </div>
     </md-toolbar>
+
+    <md-sidenav class="md-sidenav-left md-whiteframe-z2 " md-component-id="left">
+      <md-toolbar>
+        <h1 class="md-toolbar-tools">Add a classified</h1>
+      </md-toolbar>
+
+
+        <md-content layou-padding>
+        <form>
+          <md-iput-container>
+            <label for="title">Title</label>
+            <input type="text" id="title" md-autofoucus>
+          </md-input-container>
+          <md-iput-container>
+            <label for="price">Price</label>
+            <input type="text" id="price">
+          </md-input-container>
+          <md-iput-container>
+            <label for="description">Description</label>
+            <textarea type="text" id="description"></textarea>
+          </md-input-container>
+          <md-iput-container>
+            <label for="image">Image Link</label>
+            <input type="text" id="image">
+          </md-input-container>
+          <md-button class="md-primary">
+            Save
+          </md-button>
+          <md-button class="md-primary">
+            Save Edit
+          </md-button>
+          <md-button ng-click="closeSidebar()" class="md-warn">
+            Cancel
+          </md-button>
+        </form>
+      </md-content>
+
+    </md-sidenav>
+
 
     <md-content class="md-padding" layout="row" layout-wrap>
       <md-card ng-repeat="classified in classifieds" flex="30">
