--- a/index.html
+++ b/index.html
@@ -29,23 +29,23 @@
 
         <md-content layou-padding>
         <form>
-          <md-iput-container>
+          <md-input-container>
             <label for="title">Title</label>
-            <input type="text" id="title" md-autofoucus>
+            <input type="text" id="title" ng-model="classified.title" md-autofoucus>
           </md-input-container>
-          <md-iput-container>
+          <md-input-container>
             <label for="price">Price</label>
-            <input type="text" id="price">
+            <input type="text" id="price" ng-model="classified.price">
           </md-input-container>
-          <md-iput-container>
+          <md-input-container>
             <label for="description">Description</label>
-            <textarea type="text" id="description"></textarea>
+            <textarea type="text" id="description" ng-model="classified.description"></textarea>
           </md-input-container>
-          <md-iput-container>
+          <md-input-container>
             <label for="image">Image Link</label>
-            <input type="text" id="image">
+            <input type="text" id="image" ng-model="classified.image">
           </md-input-container>
-          <md-button class="md-primary">
+          <md-button ng-click="saveClassified(classified)" class="md-primary">
             Save
           </md-button>
           <md-button class="md-primary">
@@ -54,6 +54,7 @@
           <md-button ng-click="closeSidebar()" class="md-warn">
             Cancel
           </md-button>
+          <pre>{{ classified | json }}</pre>
         </form>
       </md-content>
 
