--- a/index.html
+++ b/index.html
@@ -33,6 +33,24 @@
         <label>Enter Search Term</label>
         <input type="text" name="" value="" ng-model="classifiedsFilter">
       </md-input-container>
+
+      <md-input-container>
+        <label>Category</label>
+        <md-select ng-model="category">
+            <md-option ng-repeat="category in categories" value="{{ category }}">
+              {{category}}
+            </md-option>
+        </md-select>
+      </md-input-container>
+
+      <div layout="row">
+        <md-button
+          class="md-warn"
+          ng-click="classifiedsFilter = ''; category= '' ">
+          Clear
+        </md-button>
+      </div>
+
     </div>
 
     <md-sidenav class="md-sidenav-left md-whiteframe-z2 " md-component-id="left">
@@ -76,7 +94,7 @@
 
 
     <md-content class="md-padding" layout="row" layout-wrap>
-      <md-card ng-repeat="classified in classifieds | filter: classifiedsFilter" flex="30">
+      <md-card ng-repeat="classified in classifieds | filter: classifiedsFilter | filter: category" flex="30">
         <img ng-src="{{classified.image}}" alt="">
         <md-card-content>
           <div class="classified-info" ng-show="!showContact">
@@ -119,6 +137,8 @@
     <script src="scripts/app.js"></script>
     <script src="components/classifieds.ctr.js"></script>
     <script src="components/classifieds.fac.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.min.js">
 
+    </script>
     </body>
 </html>
